--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: #e07ece;
+  background-color: #5799da;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
